it finally compile (it's State and not Sate)

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,9 @@ framework = arduino
 upload_port = /dev/ttyUSB0
 monitor_speed = 9600
 lib_deps =
+  Automata
+  Motors
+  Wire
   makeblock-official/MakeBlockDrive 
   pololu/OPT3101
   martinsos/HCSR04
